--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,48 @@
-# Compiled class file
-*.class
+public class StringCalculator
+    {
+        public int AddNumbers(string args)
+        {
+            if (string.IsNullOrEmpty(args))
+            {
+                return 0;
+            }
 
-# Log file
-*.log
+            var delimeters = new List<char>()
+                                    {
+                                        '\n',','
+                                    };
 
-# BlueJ files
-*.ctxt
+            if (args[0] == '/')
+            {
+                var customDelimeter = args[2];
+                delimeters.Add(customDelimeter);
+                args = args.Remove(0,
+                                   3);
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+            }
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+            var numbers = args.ToCharArray().Where(x => !delimeters.Contains(x)).ToList();
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+            if (numbers.Any(x => x == '-'))
+            {
+                StringBuilder stringBuilder= new StringBuilder();
+                for (int i = 0;
+                     i < numbers.Count;
+                     i++)
+                {
+                    if (numbers[i] == '-')
+                    {
+                        stringBuilder.Append("-");
+                        stringBuilder.Append(numbers[++i]);
+                        stringBuilder.Append(", ");
+                    }    
+                }
+
+                throw new Exception(string.Format("negatives {0} not allowed",stringBuilder.ToString()));
+            }
+
+            var sum = numbers.Sum(x => (int)Char.GetNumericValue(x));
+
+            return sum;
+        }
+    }
